--- a/paintapp/static/index.html
+++ b/paintapp/static/index.html
@@ -16,7 +16,7 @@
           background-color: #f4e4fb;
           box-shadow: inset 0 0 5px #b6b6b6; 
           border-radius: 2px;
-          border: 5px solid #c27aeb;
+          border: 5px solid #050505;
         }
         #buttonstyle{
           background-color: #f4e4fb;
